Add JDK 17 to the test matrix (#519)